@@ -29,5 +29,6 @@ David F. Skoll
 Bogdan Pintea
 Gerfried Fuchs
 Stanislas Rouvelin
+Sami Kerola
 
 $Id$
