@@ -2,6 +2,8 @@
 
 * Add in list of clusters to 'Add Host' window 
   - thanks for Stanislas Rouvelin for the idea
+* Fix bug where unresolvable host stopped program running
+  - thanks to Sami Kerola
 
 2009-06-02 Duncan Ferguson <duncan_ferguson@user.sf.net> - v3.26-1
 
